# cognition-calculator

./: .gitignore  CMakeLists.txt  README.org  links.txt  main.c
examples/: CMakeLists.txt  lcd_test.c
lib/fatfs/: fatfs_storage.c  fatfs_storage.h
lib/lcd/: LCD_Bmp.c  LCD_Bmp.h  LCD_Driver.c  LCD_Driver.h  LCD_GUI.c  LCD_Touch.c  LCD_Touch.h
lib/sdcard/: MMC_SD.h
